--- a/css/style.css
+++ b/css/style.css
@@ -92,9 +92,9 @@
 }
 
 .first-one {
-    justify-content: center;
+    /* justify-content: center;
     display: flex;
-    justify-items: center;
+    justify-items: center; */
     /* background: url(/images/bg-dots.svg); */
     background-size: cover;
     background-repeat: no-repeat;
@@ -111,10 +111,11 @@
 }
 
 .img-hero {
-    padding: 25px;
+    padding: 25px 0 0 25px;
     margin: 0;
     background-repeat: no-repeat;
-    width: 70%;
+    width: 100%;
+    height: 550px;
     background-size: cover;
 }
 
@@ -569,4 +570,45 @@ input {
 
 .tab3 {
     margin: auto;
+}
+
+.blue-back {
+    position: absolute;
+    top: 30%;
+    height: 359px;
+    width: 35%;
+    left: 65%;
+    float: right;
+    margin-right: 0;
+    background-color: #5368df;
+    z-index: -1;
+}
+
+.ground {
+    border-top-left-radius: 200px;
+    border-bottom-left-radius: 200px;
+}
+
+.ground2 {
+    border-top-right-radius: 200px;
+    border-bottom-right-radius: 200px;
+    position: absolute;
+    top: 30%;
+    height: 359px;
+    width: 51%;
+    right: 65%;
+    float: right;
+    margin-right: 0;
+    background-color: #5368df;
+    z-index: -1
+}
+
+.img-2 {
+    position: relative;
+    width: 100%;
+}
+
+.img-3 {
+    position: relative;
+    width: 82%;
 }
